# language-pipes

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  model_info.md  profile_job_processor.py  pyproject.toml  pytest.ini  rfm_vulns.md  test.sh  test.toml  tmp.py  website_plan.md
.agents/skills/distributed-state-network/: SKILL.md
.agents/skills/distributed_state_network/: SKILL.md
.agents/skills/llm-layer-collector/: SKILL.md
.agents/skills/llm_layer_collector/: SKILL.md
.agents/skills/main-frame/: SKILL.md
.agents/skills/main_frame/: SKILL.md
.agents/skills/page-state/: SKILL.md
.agents/skills/tui/: SKILL.md
.github/workflows/: deploy-website.yml  publish-packages.yml  tests.yml
.task/: close-template.md  notes.md  opencode-prompt.txt  plan.md  run-opencode.sh
documentation/: architecture.md  cli.md  comparison.md  configuration.md  https.md  interactive-setup.md  job-processor.md  llm-layer-collector.md  lp_2_migration.md  model_support.md  oai.md  privacy.md  release-notes.md  request-for-model.md  roadmap.md
documentation/distributed-state-network/: README.md  ds-node-config.md  ds-node-server.md  protocol.md
documentation/threat-model/: sipit.md
pictures/: Basic_Flow.drawio
plans/: mainframe_first_session_steps.md  mainframe_tui_design_and_implementation_plan.md  phase2.md  phase3.md  phase4.md  phase5.md
src/distributed_state_network/: dsnode.py  handler.py
src/distributed_state_network/objects/: config.py  hello_packet.py
src/distributed_state_network/util/: byte_helper.py  key_manager.py
src/language_pipes/: __init__.py  cli.py  config.py  config_args.py  content_loader.py  global_config.py  initialize.py  job_receiver.py  language_pipes.py  lm_net.py  lp.py  network_protocol.py  oai_server.py  runner.py  start.py
src/language_pipes/commands/: edit.py  initialize.py  key_wizard.py  start.py  view.py
src/language_pipes/config/: __init__.py  processor.py
src/language_pipes/content_provider/: content_provider.py  job_provider.py  model_provider.py  network_provider.py  pipe_provider.py  provider_calls.py  providers.py
src/language_pipes/distributed_state_network/: dsnode.py  handler.py
src/language_pipes/distributed_state_network/objects/: config.py  data_packet.py  hello_packet.py  state_packet.py
src/language_pipes/distributed_state_network/util/: key_manager.py
src/language_pipes/handlers/: job.py  oai.py
src/language_pipes/job_manager/: __init__.py  job.py  job_data.py  layer_job.py  pending_job.py  pipe.py  router_pipes.py
src/language_pipes/jobs/: job.py  job_data.py  job_factory.py  job_manager.py  job_processor.py  job_receiver.py  job_receiver_fsm.py  job_server.py  job_tracker.py  layer_job.py  network_job.py  pending_job.py  timing_stats.py
src/language_pipes/llm_layer_collector/: __init__.py  cache.py  helpers.py  layer_collector.py  load_layer.py  state_obj.py
src/language_pipes/llm_layer_collector/auto/: auto_layer.py  auto_model.py  auto_rms.py  auto_rotary.py  static_auto_model.py
src/language_pipes/llm_model/: __init__.py  computed.py  end_model.py
src/language_pipes/modeling/: compute.py  computed.py  end_model.py  llm_meta_data.py  llm_model.py  meta_computed.py  meta_model.py  model_manager.py
src/language_pipes/network/: __init__.py  config.py  dsn.py  factory.py  types.py
src/language_pipes/pipes/: meta_pipe.py  pipe.py  pipe_manager.py  router_pipes.py
src/language_pipes/request_for_model/: rfm.py  rfm_packets.py  state.py  util.py
src/language_pipes/tui/: __init__.py  banner.txt  confirm_dialog.py  content_loader.py  content_provider.py  edit_confirm_dialog.py  kb_utils.py  main.py  main_frame.py  main_menu.py  nav_state.py  placeholders.py  prompt.py  screen_utils.py  tests.txt  text_field.py  top_nav.py  tui.py  view_state.py
src/language_pipes/util/: __init__.py  aes.py  byte_helper.py  chat.py  chunk_state.py  config.py  env_props.py  http.py  logging.py  meta.py  oai.py  oai_chunks.py  oai_tool_calls.py  user_prompts.py  utils.py
tests/: call.py  conftest.py  oai.py  test_job_data.py  test_meta_pipe.py  test_network_job.py  test_router_pipes.py
tests/distributed_state_network/: base.py  connections.py  test.py  test_aes.py  test_callbacks.py  test_configuration.py  test_connectivity.py  test_disconnect.py  test_error_handling.py  test_http_endpoints.py  test_security.py  test_state_data.py  test_wrapper_methods.py
tests/integration/: oai.py  test_oai.py
tests/language_pipes/integration/: oai.py  tui.py
tests/language_pipes/unit/: __init__.py  test_cli.py  test_clone_model.py  test_config.py  test_global_config.py  test_hosted_models_view.py  test_http.py  test_job.py  test_job_data.py  test_job_factory.py  test_job_receiver.py  test_llm_layer_collector_gpt_oss.py  test_logging.py  test_main_frame.py  test_main_menu.py  test_meta_pipe.py  test_model_manager.py  test_nav_state.py  test_network_job.py  test_oai_responses.py  test_rfm.py  test_router_pipes.py  test_runner.py  util.py
tests/llm_layer_collector/: __init__.py  collector.py  memguard.py  test.py  test_real_models.py  test_tiny_models.py  test_units.py
tests/unit/: __init__.py  cli.py  test_cli.py  test_job_processor.py  test_meta_pipe.py  test_network_job.py  test_router_pipes.py
tests/unit/job_processor/: test_processor.py  test_state_embed.py  test_state_head.py  test_state_layers.py  test_state_send.py  test_state_validating.py  util.py
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/public/: CNAME
website/src/: consts.ts  content.config.ts  rehype-doc-links.mjs
website/src/components/: SiteTitle.astro
website/src/layouts/: Base.astro
website/src/pages/: index.astro
website/src/styles/: starlight.css  terminal.css
(+122 files in other folders)
