[build-system]
requires = [
    "hatchling",
    "torch",
    "transformers",
    "uuid",
    "promise",
    "requests",
    "logging",
    "distributed-state-network",
    "llm-layer-collector",
    "toml"
]
build-backend = "hatchling.build"

[project]
name = "language-pipes"
version = "0.19.7"
authors = [{name="Erin Clemmer", email="erin.c.clemmer@gmail.com"}]
description = "Peer-to-peer distributed inference for open-source language models"
keywords = ["distributed", "networking", "AI", "Language Model", "pipe", "pipeline", "server"]
license = "MIT"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers==4.57.6",
    "huggingface_hub",
    "uuid",
    "promise",
    "requests",
    "logging",
    "toml",
    "flask",
    "ecdsa",
    "psutil",
    "cryptography"
]

[project.urls]
Homepage = "https://github.com/erinclemmer/language-pipes"
Issues = "https://github.com/erinclemmer/language-pipes/issues"
 
[project.scripts]
language-pipes="language_pipes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/language_pipes"]

[tool.coverage.run]
source = ["src/language_pipes"]
omit = [
    "*/_remote_module_non_scriptable"
]

[tool.coverage.report]
omit = [
    "*/_remote_module_non_scriptable",
    "src/language_pipes/commands/*",
    "src/language_pipes/distributed_state_network/*",
    "src/language_pipes/util/user_prompts.py"
]
