[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "language-pipes"
version = "2.4.0"
authors = [{name="Erin Clemmer", email="erin.c.clemmer@gmail.com"}]
description = "Peer-to-peer distributed inference for open-source language models"
keywords = ["distributed", "networking", "AI", "Language Model", "pipe", "pipeline", "server"]
license = "MIT"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "llm-layer-collector==1.1.0",
    "distributed-state-network==1.1.0",
    "torch",
    "transformers",
    "huggingface_hub",
    "promise",
    "requests",
    "toml",
    "ecdsa",
    "psutil",
    "pillow",
    "cryptography",
    "ansinout>=1.0.6"
]

[project.optional-dependencies]
quantization = ["bitsandbytes"]
dev = ["ruff", "pytest"]

[project.urls]
Homepage = "https://languagepipes.com"
Issues = "https://github.com/erinclemmer/language-pipes/issues"
 
[project.scripts]
language-pipes="language_pipes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/language_pipes"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/language_pipes"]
omit = [
    "*/_remote_module_non_scriptable"
]

[tool.coverage.report]
omit = [
    "*/_remote_module_non_scriptable",
    "src/language_pipes/commands/*",
    "src/language_pipes/util/user_prompts.py"
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["packages", "website", "documentation"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    # "I",   # isort
    # "UP", # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by formatter where practical, not strictly enforced
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811"]
